unifying UI with drop shadow effect across all pages. Fixing minor alignment and spacing issues

--- a/public/ctrp/ui/css/override.css
+++ b/public/ctrp/ui/css/override.css
@@ -11,7 +11,6 @@
 .grid {
     width: 100%;
     min-height: 550px;
-    margin-left: 10px;
 }
 
 .ui-grid-header-cell .ui-grid-cell-contents {
@@ -546,4 +545,13 @@ input[type=radio] {
 
 .modal-header .close {
     margin-top: -10px;
+}
+
+.drop-shadow {
+    box-shadow: 2px 2px 10px #E1E1E1;
+    border-radius: 6px;
+}
+
+.no-bottom-margin {
+    margin-bottom: 0;
 }
